--- a/themes/up-business/assets/scss/shared/shared.scss
+++ b/themes/up-business/assets/scss/shared/shared.scss
@@ -11,7 +11,7 @@
 @import "../sections/portfolio";
 @import "../sections/services";
 @import "../sections/testimonials";
-@import "../sections/cta";
+@import "../sections/formacoes";
 
 @import "../sections/blog-list";
 @import "../sections/blog-single";
