--- a/themes/up-business/layouts/partials/sections/brands.html
+++ b/themes/up-business/layouts/partials/sections/brands.html
@@ -1,16 +1,15 @@
-<section class="section brands py-5">
-  <div class="container">
-    <div class="row">
+<section id="brands" class="section brands py-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-xl-6">
       {{ with .content.title }}
-        <div class="col-12">
-          <h3 class="fs-5 fw-semibold text-primary text-center pb-4">{{ . }}</h3>
-        </div>
+        <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
       {{ end }}
     </div>
+  </div>
     <div class="row align-items-center justify-content-center">
       {{ range .content.items }}
       <div class="col px-3 my-2 text-center">
-        {{ partial "utilities/image-third.html" . }}
+        {{ partial "utilities/image.html" . }}
       </div>
       {{ end }}
     </div>
