--- a/themes/up-business/layouts/partials/utilities/card-img-top.html
+++ b/themes/up-business/layouts/partials/utilities/card-img-top.html
@@ -1,3 +1,3 @@
 {{ with resources.Get . }}
-  <img class="" src="{{ .Permalink }}" alt="{{ .Title }}" width="{{ .Width }}" height="{{ .Height }}">
+  <img style="border-radius: 200%;" src="{{ .Permalink }}" alt="{{ .Title }}" width="{{ .Width }}" height="{{ .Height }}">
 {{ end }}
