Remove ficheiros nao utilizados. Ajusta tamanho secção

--- a/themes/up-business/assets/scss/sections/hero.scss
+++ b/themes/up-business/assets/scss/sections/hero.scss
@@ -1,11 +1,14 @@
 .section.hero {
+  
+  min-height: 100vh;
+
   .hero-image {
-    // @media (min-width: 1400px) {
-    //   img {
-    //     max-width: 125%;
-    //     float: right;
-    //   }
-    // }
+    @media (min-width: 1400px) {
+       img {
+         max-width: 125%;
+         float: right;
+       }
+    }
   }
   .hero-title {
     strong {
