--- a/themes/up-business/layouts/partials/sections/contacts.html
+++ b/themes/up-business/layouts/partials/sections/contacts.html
@@ -3,6 +3,11 @@
     <div class="col-12 col-xl-6">
       {{ with .content.title }}
         <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
+        <div>
+          Email: <a href="mailto:psikitformacoes@gmail.com" target="_top">psikitformacoes@gmail.com</a>
+          <br>
+          Página do Instagram: <a href="https://www.instagram.com/psikit_formacoes/">@psikit_formacoes</a>
+        </div>
       {{ end }}
     </div>
   </div>
