--- a/themes/up-business/layouts/partials/sections/testimonials.html
+++ b/themes/up-business/layouts/partials/sections/testimonials.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <!--
-      <div class="row">
+    <<div class="row">
       {{ with .content.featured }}
       <div class="col-12 col-xl-5 d-flex flex-column justify-content-center">
         {{ with .image }}
