--- a/themes/up-business/layouts/index.html
+++ b/themes/up-business/layouts/index.html
@@ -2,7 +2,7 @@
   {{ with .Site.Data.home.hero }}{{ partial "sections/hero.html" . }}{{ end }}
   {{ with .Site.Data.home.services }}{{ partial "sections/services.html" . }}{{ end }}
   {{ with .Site.Data.home.formacoes }}{{ partial "sections/formacoes.html" . }}{{ end }}
-  {{ with .Site.Data.home.testimonials }}{{ partial "sections/testimonials.html" . }}{{ end }}
+  <!--{{ with .Site.Data.home.testimonials }}{{ partial "sections/testimonials.html" . }}{{ end }}-->
   {{ with .Site.Data.home.brands }}{{ partial "sections/brands.html" . }}{{ end }}
   {{ with .Site.Data.home.contacts }}{{ partial "sections/contacts.html" . }}{{ end }}
 {{ end }}
