--- a/themes/up-business/layouts/partials/sections/formacoes.html
+++ b/themes/up-business/layouts/partials/sections/formacoes.html
@@ -7,6 +7,41 @@
         {{ end }}
       </div>
     </div>
+    <div>
+      <h4 style="color: #ffc107;" class="pb-3"><b>Intervenções nas perturbações de ansiedade na infância e adolescência</b></h4>
+      <h6 style="color: #0d6efd;" class="pb-3"><b>22 de Março de 2025</b></h6>
+      <p class="text-black-61 pb-3">
+        <u>Online</u> (Zoom)<br>
+        <u>Publico alvo:</u> médicos internos e especialistas em Psiquiatria da Infância e Adolescência e Medicina Geral e Familiar<br>
+        Abertura das inscrições a <u>1 de fevereiro de 2025</u> | Vagas limitadas<br>
+        <h6 style="color: #0d6efd;" class="pb-3">Programa</h6>
+        <b>9H00 – 9H30<br>
+        Sessão de abertura e enquadramento teórico</b><br>
+        <i>Inês Barroca e Catarina Melo Santos</i><br>
+        -<br>
+        <b>9H30 – 10H30<br>
+        Psicoterapia cognitivo-Comportamental de 2ª e 3ª geração</b><br>
+        <i>Drª. Rosário Carmona e Costa</i><br>
+        - <br>
+        <i>10H30 – 11H00<br>
+        Intervalo</i><br>
+        - <br>
+        <b>11H00 – 11H30<br>
+        Detetives das emoções</b><br>
+        <i>Drª. Brígida Caiado</i><br>
+        - <br>
+        <b>11H30 – 12H30<br>
+        Terapia Interpessoal</b><br>
+        <i>Dr. Nuno Carrilho</i><br>
+        -<br>
+        <i>12H30 – 14H00<br>
+        Pausa para almoço</i><br>
+        - <br>
+        <b>14H00 – 16H30<br>
+        Intervenções farmacológicas e casos clínicos</b><br>
+        <i>Dr. José Estrada</i><br>
+      </p>
+    </div>
     <!--
     <div class="row justify-content-center">
       <div class="col-12 col-xl-6 text-center">
