--- a/themes/up-business/layouts/partials/sections/formacoes.html
+++ b/themes/up-business/layouts/partials/sections/formacoes.html
@@ -3,43 +3,96 @@
     <div class="row justify-content-center">
       <div class="col-12 col-xl-6">
         {{ with .content.title }}
-          <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
+        <h3 class="fs-1 fw-bold text-center text-primary pb-3">{{ . }}</h3>
         {{ end }}
       </div>
     </div>
     <div>
-      <h4 style="color: #ffc107;" class="pb-3"><b>Intervenções nas perturbações de ansiedade na infância e adolescência</b></h4>
+      <h4 style="color: #ffc107;" class="pb-3"><b>Intervenções nas perturbações de ansiedade na infância e
+          adolescência</b></h4>
       <h6 style="color: #8AC6CE" class="pb-3"><b>22 de Março de 2025</b></h6>
       <p class="text-black-61 pb-3">
         <u>Online</u> (Zoom)<br>
-        <u>Publico alvo:</u> médicos internos e especialistas em Psiquiatria da Infância e Adolescência e Medicina Geral e Familiar<br>
-        Abertura das inscrições a <u>1 de fevereiro de 2025</u> | Vagas limitadas<br>
-        <h6 style="color: #8AC6CE" class="pb-3">Programa</h6>
-        <b>9H00 – 9H30<br>
+        <u>Publico alvo:</u> médicos internos e especialistas em Psiquiatria da Infância e Adolescência e Medicina Geral
+        e Familiar<br>
+        Abertura das inscrições a <u>1 de fevereiro de 2025</u> | 40 vagas<br>
+        Inscreva-se no <a href="https://forms.gle/Dkee94NM4XcjeFsb8">formulário de inscrição para esta formação.</a>
+      <h6 style="color: #8AC6CE" class="pb-3">Programa</h6>
+      <b>9H00 – 9H30<br>
         Sessão de Abertura e Enquadramento Teórico</b><br>
-        <i>Inês Barroca e Catarina Melo Santos</i><br>
-        -<br>
-        <b>9H30 – 10H30<br>
+      <i>Inês Barroca e Catarina Melo Santos</i><br>
+      -<br>
+      <b>9H30 – 10H30<br>
         Psicoterapia Cognitivo-Comportamental de 2ª e 3ª geração</b><br>
-        <i>Drª. Rosário Carmona e Costa</i><br>
-        - <br>
-        <i>10H30 – 11H00<br>
+      <i>Drª. Rosário Carmona e Costa</i><br>
+      - <br>
+      <i>10H30 – 11H00<br>
         Intervalo</i><br>
-        - <br>
-        <b>11H00 – 11H30<br>
+      - <br>
+      <b>11H00 – 11H30<br>
         Detetives das Emoções</b><br>
-        <i>Drª. Brígida Caiado</i><br>
-        - <br>
-        <b>11H30 – 12H30<br>
+      <i>Drª. Brígida Caiado</i><br>
+      - <br>
+      <b>11H30 – 12H30<br>
         Terapia Interpessoal</b><br>
-        <i>Dr. Nuno Carrilho</i><br>
-        -<br>
-        <i>12H30 – 14H00<br>
+      <i>Dr. Nuno Carrilho</i><br>
+      -<br>
+      <i>12H30 – 14H00<br>
         Pausa para almoço</i><br>
-        - <br>
-        <b>14H00 – 16H30<br>
+      - <br>
+      <b>14H00 – 16H30<br>
         Intervenções Farmacológicas e Casos Clínicos</b><br>
-        <i>Dr. José Estrada</i><br>
+      <i>Dr. José Estrada</i><br>
+      <br>
+      <h6 style="color: #8AC6CE" class="pb-3">Oradores</h6>
+      <b>Drª. Rosário Carmona e Costa</b><br>
+      Psicóloga clínica. Psicoterapeuta pela APTCCI<br>
+      Fundadora do Belong- Instituto de Desenvolvimento e Saúde<br>
+      Autora do livro "Salva Vidas - como a inteligência emocional nos pode salvar", oficina do livro<br>
+      Coautora do livro “Navegar em segurança”, clube do autor<br>
+      Autora do livro “iAgora – liberte os seus filhos da dependência dos ecrãs”, esfera dos livros<br>
+      Autora do jogo de tabuleiro “Bullying, um dia na escola”, ideias com história<br>
+      Fundadora dos grupos de pais “TOP- Tertúlias com outros pais”<br>
+      Fundadora das Férias Inteligentes – ateliers de promoção de inteligência emocional para crianças e jovens<br>
+      Membro da Associação Portuguesa de Psicoterapia Cognitiva e Comportamental Integrativa<br>
+      Membro da American Psychologist Association e da sua Academia de Líderes Emergentes em Psicologia<br>
+      Professora convidada nas pós-graduações "Direito das Crianças" e "Neurodesenvolvimento em pediatria" da
+      Universidade Católica Portuguesa<br>
+      Docente na Pós-graduação Produtividade Pessoal e Profissional, do ISCTE<br>
+      Fundadora do projeto D'ELA - Estudo, Literacia e Atendimento da Mulher ao longo da vida<br>
+      <br>
+      <b>Drª. Brígida Caiado</b><br>
+      Psicóloga Clínica, <br>
+      Especialista em Psicologia Clínica e da Saúde pela Ordem dos Psicólogos Portugueses<br>
+      Mestre em Psicologia Clínica: Intervenções Cognitivo-Comportamentais nas Perturbações Psicológicas e da Saúde,
+      pela Universidade de Coimbra<br>
+      Doutoranda em Psicologia Clínica e da Saúde na FPCE da Universidade de Coimbra<br>
+      Psicóloga Clínica no Centro Hospitalar Tondela-Viseu<br>
+      Psicóloga Clínica na Clínica S. Cosme em Viseu<br>
+      Membro do Centro de Investigação em Neuropsicologia e Intervenções Cognitivo-Comportamentais <br>
+      <br>
+      <b>Dr. Nuno Carrilho</b><br>
+      Psiquiatra desde 2011.<br>
+      Psiquiatra no Centro Hospitalar do Baixo Vouga de 2011 até 2019, onde foi coordenador do Hospital de Dia de Psiquitria.<br>
+      Psiquiatra no Hospital Universitário de Aalborg, Dinamarca de 2019 até 2024 .<br>
+      Pós graduação em Terapia Cognitivo Comportamental em 2011/12.<br>
+      Terapeuta Interpessoal (TIP): nível A em 2010, supervisão de 2011-2013, nível Ce D em 2014, supervisor desde 2014, formador desde 2016.<br>
+      Um dos fundadores do Instituto de Terapia Interpessoal em 2023.<br>
+      Terapeuta Familiar, pela Delegação Norte da Sociedade Portuguesa de Terapia Familiar desde 2024.<br>
+      <br>
+      <b>Dr. José Estrada</b><br>
+      Internato complementar de Psiquiatria da Infância e da Adolescência no Centro Hospitalar Lisboa Ocidental (2009 a 2014) durante o qual participou como assistente convidado da Universidade NOVA Medical School.<br>
+      Médico Assistente Hospitalar de Psiquiatria da Infância e da Adolescência desde 2014.<br>
+      Chef de Clinique no Service Universitaire de Psychiatrie de l´enfant et de l´adolescent (SUPEA) do Centre Hospitalier Universitaire Vaudais (CHUV Lausanne) nas Unidades Centre Thérapeutique de Jour pour Adolescents CTJA (2014-2015); Unité d´Hospitalisation psychiatrique pour adolescents UHPA (2015 a 2017); Consultation ambulatoire Boston (2016 a 2018). <br>
+      Orientador de estágio para médicos internos da formação complementar da especialidade, psicólogos clínicos, pediatras e estudantes de medicina.<br>
+      Médico Assistente Hospitalar de Psiquiatria da Infância e da Adolescência no Hospital Distrital de Santarém ULS Lezíria em 2018.<br>
+      Médico Assistente Hospitalar de Psiquiatria da Infância e da Adolescência no Hospital Garcia de Orta ULS Almada-Seixal em 2019.<br>
+      Médico Assistente Hospitalar de Psiquiatria da Infância e da Adolescência no Centro Hospitalar Barreiro Montijo, ULS Arco Ribeirinho desde 2020 a Dezembro de 2024 onde exerceu funções de Coordenação do Hospital de Dia Para Adolescentes e do Núcleo de Pedopsiquiatria.  <br>
+      Prelector convidado para aulas do Curso de Internato de Pedopsiquiatria organizado pelo Departamento de Pedopsiquiatria do Hospital Dona Estefânia, ULS de São José onde também exerce funções na Urgência Metropolitana de Lisboa da especialidade.<br>
+      Terapeuta Familiar (formação na Sociedade Portuguesa de Terapia Familiar, SPTF) desde 2023.<br>
+      Membro da Direção do Colégio da Especialidade de Psiquiatria da Infância e da Adolescência desde 2024.<br>
+
+
       </p>
     </div>
     <!--
