--- a/themes/up-business/layouts/partials/sections/formacoes.html
+++ b/themes/up-business/layouts/partials/sections/formacoes.html
@@ -16,6 +16,7 @@
         <u>Publico alvo:</u> médicos internos e especialistas em Psiquiatria da Infância e Adolescência e Medicina Geral
         e Familiar<br>
         Abertura das inscrições a <u>1 de fevereiro de 2025</u> | 40 vagas<br>
+        Preço desta formação: 35€<br>
         Inscreva-se no <a href="https://forms.gle/Dkee94NM4XcjeFsb8">formulário de inscrição para esta formação.</a>
       <h6 style="color: #8AC6CE" class="pb-3">Programa</h6>
       <b>9H00 – 9H30<br>
