--- a/themes/up-business/layouts/partials/sections/formacoes.html
+++ b/themes/up-business/layouts/partials/sections/formacoes.html
@@ -17,7 +17,7 @@
           <u>Online</u> (Zoom)<br>
           <u>Publico alvo:</u> médicos internos e especialistas em Psiquiatria da Infância e Adolescência e qualquer
           outro profissional da área de Saúde Mental<br>
-          Abertura das inscrições a <u>28 de agosto de 2025</u> | vagas limitadas<br>
+          Abertura das inscrições a <u>28 de Julho de 2025</u> | vagas limitadas<br>
           Preço desta formação: 35€ (sessões da manhã + sessões da tarde) ou 25€ (sessões da manhã ou sessões da
           tarde)<br>
           Inscreva-se no <a href="https://forms.gle/rUBnwUYQmxB2sr9X8">formulário de inscrição para esta formação.</a>
