--- a/themes/up-business/layouts/partials/sections/formacoes.html
+++ b/themes/up-business/layouts/partials/sections/formacoes.html
@@ -32,6 +32,7 @@
         - <br>
         <b>10H00 – 11H00<br>
           Treino de Competências Sociais</b><br>
+        <i>Drª. Joana de Sousa</i><br>
         - <br>
         <i>11H00 – 11H30<br>
           Intervalo</i><br>
@@ -59,6 +60,15 @@
         Pós-graduada em Integração Sensorial<br>
         Certificação Internacional em Ayres Sensory Integration pela CLASI<br>
         Actuação especializada na primeira infância, com foco em perturbações do neurodesenvolvimento e seletividade alimentar<br>
+        <br>
+        <b>Drª. Joana de Sousa</b><br>
+        Psicóloga Clínica em contexto de clínica privada e contexto escolar<br>
+        Especialista em Psicologia Clínica pela Ordem dos Psicólogos Portugueses (OPP)<br>
+        Pós graduação em Neuropsicologia Pediátrica<br>
+        Curso Neuropediatria e Desenvolvimento<br>
+        Pós Graduação em Avaliação e Intervenção com Crianças e Adolescentes<br>
+        Formação no modelo de intervenção para as PEA: DIR/Floortime<br>
+        Certificação na Escala de Desenvolvimento Griffiths III<br>
         <br>
         <b>Drª. Joana Figueiredo Gonçalves</b><br>
         Psicomotricista, coordenadora da equipa de Psicomotricidade e Educação Especial do Hospital da Luz Lisboa<br>
