--- a/themes/up-business/layouts/partials/sections/formacoes.html
+++ b/themes/up-business/layouts/partials/sections/formacoes.html
@@ -10,86 +10,45 @@
     <div>
       <h3>Próximas</h3>
       <div>
-        <h4 style="color: #ffc107;" class="pb-3"><b>Intervenções nas perturbações do espectro do autismo na infância e
-            adolescência</b></h4>
-        <h6 style="color: #8AC6CE" class="pb-3"><b>26 de Setembro de 2025</b></h6>
+        <h4 style="color: #ffc107;" class="pb-3"><b>Sessão Questions & Answers: “Psicofarmacologia na Infância e Adolescência”</b></h4>
+        <h6 style="color: #8AC6CE" class="pb-3"><b>24 de Outubro de 2025</b></h6>
         <p class="text-black-61 pb-3">
           <u>Online</u> (Zoom)<br>
-          <u>Publico alvo:</u> médicos internos e especialistas em Psiquiatria da Infância e Adolescência e qualquer
-          outro profissional da área de Saúde Mental<br>
-          Abertura das inscrições a <u>28 de Julho de 2025</u> | vagas limitadas<br>
-          Preço desta formação: 35€ (sessões da manhã + sessões da tarde) ou 25€ (sessões da manhã ou sessões da
-          tarde)<br>
-          Inscreva-se no <a href="https://forms.gle/rUBnwUYQmxB2sr9X8">formulário de inscrição para esta formação.</a>
+          <u>Publico alvo:</u> Médicos internos e especialistas em Psiquiatria da Infância e Adolescência e Medicina Geral e Familiar
+          <br>
+          Abertura das inscrições a <u>9 de Setembro de 2025</u> | vagas limitadas<br>
+          Preço desta formação: 30€
+          <br>
+          Inscreva-se no <a href="https://forms.gle/Ecw94p3kZUnbNoVd7">formulário de inscrição para esta formação.</a>
         <h6 style="color: #8AC6CE" class="pb-3">Programa</h6>
-        <b>9H00 – 9H15<br>
-          Sessão de Abertura e Enquadramento Teórico</b><br>
-        <i>Inês Barroca e Catarina Melo Santos</i><br>
-        -<br>
-        <b>9H15 – 10H00<br>
-          Terapia Ocupacional e Integração Sensorial</b><br>
-        <i>Drª. Nídia Reis</i><br>
-        - <br>
-        <b>10H00 – 11H00<br>
-          Treino de Competências Sociais</b><br>
-        <i>Drª. Joana de Sousa</i><br>
-        - <br>
-        <i>11H00 – 11H30<br>
-          Intervalo</i><br>
-        - <br>
-        <b>11H30 – 12H30<br>
-          Psicomotricidade e Terapia Tailor Made</b><br>
-        <i>Drª. Joana Figueiredo Gonçalves</i><br>
-        -<br>
-        <i>12H30 – 14H00<br>
-          Pausa para almoço</i><br>
-        - <br>
-        <b>14H00 – 14H30<br>
-          Intervenção de Base Relacional (PACT, Denver, Floortime)
-        </b><br>
-        <i>Drª. Joana Mesquita Reis</i><br>
-        - <br>
-        <b>14H30 – 16H30<br>
-          Intervenção Farmacológica e Casos Clínicos
-        </b><br>
-        <i>Drª. Joana Mesquita Reis</i><br>
+        <b>18H00 – 20H00<br>
+          Sessão interativa de perguntas e respostas e partilha de casos clínicos.</b><br>
+        <i>Drª Paula Cristina Correia e Dr. João Picoito</i><br>
         <br>
         <h6 style="color: #8AC6CE" class="pb-3">Oradores</h6>
-        <b>Drª. Nídia Reis</b><br>
-        Terapeuta Ocupacional Pediátrica<br>
-        Pós-graduada em Integração Sensorial<br>
-        Certificação Internacional em Ayres Sensory Integration pela CLASI<br>
-        Actuação especializada na primeira infância, com foco em perturbações do neurodesenvolvimento e seletividade alimentar<br>
+        <b>Drª. Paula Cristina Correia</b><br>
+        Médica Psiquiatra da Infância e Adolescência, assistente graduada sénior.<br>
+        Diretora do Serviço de Psiquiatria da Infância e Adolescência no Centro Hospitalar Universitário da Cova da Beira.<br>
+        Diretora do Departamento de Psiquiatria e Saúde Mental da ULS Cova da Beira.<br>
+        Docente na Faculdade de Ciências da Saúde da Universidade da Beira Interior (UBI).<br>
+        Membro da Coordenação Regional de Saúde Mental da ARS Centro.<br>
+        Presidente da Associação Portuguesa de Psiquiatria da Infância e Adolescência.<br>
         <br>
-        <b>Drª. Joana de Sousa</b><br>
-        Psicóloga Clínica em contexto de clínica privada e contexto escolar<br>
-        Especialista em Psicologia Clínica pela Ordem dos Psicólogos Portugueses (OPP)<br>
-        Pós graduação em Neuropsicologia Pediátrica<br>
-        Curso Neuropediatria e Desenvolvimento<br>
-        Pós Graduação em Avaliação e Intervenção com Crianças e Adolescentes<br>
-        Formação no modelo de intervenção para as PEA: DIR/Floortime<br>
-        Certificação na Escala de Desenvolvimento Griffiths III<br>
-        <br>
-        <b>Drª. Joana Figueiredo Gonçalves</b><br>
-        Psicomotricista, coordenadora da equipa de Psicomotricidade e Educação Especial do Hospital da Luz Lisboa<br>
-        ⁠Faz avaliação formal, orientação parental e acompanha desde bebés a pré-adolescentes nas áreas do neurodesenvolvimento e saúde mental, em articulação com a família, escola e treinadores<br>
-        Supervisora clínica de psicomotricistas<br>
-        Consultora educacional da Edu4Word<br>
-        Foi Professora Convidada da FMH e mantém-se na orientação de estágios académicos<br>
-        <br>
-        <b>Drª. Joana Mesquita Reis</b><br>
-        Assistente Hospitalar de Pedopsiquiatria na equipa da Unidade da Primeira Infância da Unidade Local de Saúde de São José<br>
-        Formação em intervenção sistémica e familiar pela SPTF<br>
-        Pós graduação em Psicoterapia Cognitivo Comportamental da Infância e da Adolescência<br>
-        Formação e acreditação na ADOS-2 e ADI-R e nos modelos de intervenção para as PEA: Denver, DIR/Floortime e PACT<br>
+        <b>Dr. João Picoito</b><br>
+        Mestre em Medicina pela Faculdade de Medicina de Lisboa (2007-2013) e possui o Certificate on Anxiety and Depression da Maastricht University (2015).<br>
+        Assistente Hospitalar de Pedopsiquiatria do Serviço de Pedopsiquiatria do Hospital Pediátrico de Coimbra (desde 2022), onde também realizou o internato de formação específica (2016-2021). Exerce atualmente funções na Consulta Externa de Pedopsiquiatria e na Unidade de Ligação. <br>
+        Professor Auxiliar Convidado na Faculdade de Medicina da Universidade de Coimbra.<br>
+        Doutorado em Saúde Pública pela Escola Nacional de Saúde Pública da Universidade Nova de Lisboa (2021), com a tese "Emotional and behavioural pathways to early adolescent substance use". <br>
+        É autor e co-autor de artigos científicos em revistas especializadas com fator de impacto e orientador de dissertações de mestrado em saúde mental infantojuvenil.<br>
         <br>
 
         </p>
       </div>
       <h3>Anteriores</h3>
       <div>
-        <h6 style="color: #8AC6CE" class="pb-3"><b>22 de Março de 2025 - Intervenções nas perturbações de ansiedade na infância e
-          adolescência</b></h6>
+        <h6 style="color: #8AC6CE" class="pb-3"><b>26 de Setembro de 2025 - Intervenções nas perturbações do espectro do autismo na infância e adolescência</b></h6>
+        <p class="text-black-61 pb-3">
+        <h6 style="color: #8AC6CE" class="pb-3"><b>22 de Março de 2025 - Intervenções nas perturbações de ansiedade na infância e adolescência</b></h6>
         <p class="text-black-61 pb-3">
         </p>
       </div>
