Add nova formação

--- a/themes/up-business/layouts/partials/sections/formacoes.html
+++ b/themes/up-business/layouts/partials/sections/formacoes.html
@@ -7,64 +7,94 @@
         {{ end }}
       </div>
     </div>
-    <div>
+<div>
       <h3>Próximas</h3>
       <div>
-        <h4 style="color: #ffc107;" class="pb-3"><b>Sessão Questions & Answers: “Psicofarmacologia na Infância e Adolescência”</b></h4>
-        <h6 style="color: #8AC6CE" class="pb-3"><b>24 de Outubro de 2025</b></h6>
+        <h4 style="color: #ffc107;" class="pb-3"><b>Intervenções na Perturbação de Stress Pós-Traumático (em todas as idades)</b></h4>
+        <h6 style="color: #8AC6CE" class="pb-3"><b>6 de março de 2026</b></h6>
         <p class="text-black-61 pb-3">
           <u>Online</u> (Zoom)<br>
-          <u>Publico alvo:</u> Médicos internos e especialistas em Psiquiatria da Infância e Adolescência e Medicina Geral e Familiar
+          <u>Publico alvo:</u> Médicos internos e especialistas em Psiquiatria da Infância e Adolescência e Psiquiatria
           <br>
-          Abertura das inscrições a <u>9 de Setembro de 2025</u> | vagas limitadas<br>
-          Preço desta formação: 30€
+          Abertura das inscrições a <u>21 de janeiro de 2026</u> | vagas limitadas<br>
+          Preço desta formação: 35€ (dia completo) | 25€ (meio dia - manhã ou tarde)
           <br>
           Inscreva-se no <a href="https://forms.gle/Ecw94p3kZUnbNoVd7">formulário de inscrição para esta formação.</a>
         <h6 style="color: #8AC6CE" class="pb-3">Programa</h6>
-        <b>18H00 – 20H00<br>
-          Sessão interativa de perguntas e respostas e partilha de casos clínicos.</b><br>
-        <i>Drª Paula Cristina Correia e Dr. João Picoito</i><br>
+        <b>09H00 – 09H15<br>
+          Sessão de abertura e enquadramento teórico.</b><br>
         <br>
-        <h6 style="color: #8AC6CE" class="pb-3">Oradores</h6>
-        <b>Drª. Paula Cristina Correia</b><br>
-        Médica Psiquiatra da Infância e Adolescência, assistente graduada sénior.<br>
-        Diretora do Serviço de Psiquiatria da Infância e Adolescência no Centro Hospitalar Universitário da Cova da Beira.<br>
-        Diretora do Departamento de Psiquiatria e Saúde Mental da ULS Cova da Beira.<br>
-        Docente na Faculdade de Ciências da Saúde da Universidade da Beira Interior (UBI).<br>
-        Membro da Coordenação Regional de Saúde Mental da ARS Centro.<br>
-        Presidente da Associação Portuguesa de Psiquiatria da Infância e Adolescência.<br>
+        <b>09H15 – 10H45<br>
+          CBT focada no trauma e EMDR.</b><br>
+        <i>Drª Sara Valadares</i><br>
         <br>
-        <b>Dr. João Picoito</b><br>
-        Mestre em Medicina pela Faculdade de Medicina de Lisboa (2007-2013) e possui o Certificate on Anxiety and Depression da Maastricht University (2015).<br>
-        Assistente Hospitalar de Pedopsiquiatria do Serviço de Pedopsiquiatria do Hospital Pediátrico de Coimbra (desde 2022), onde também realizou o internato de formação específica (2016-2021). Exerce atualmente funções na Consulta Externa de Pedopsiquiatria e na Unidade de Ligação. <br>
-        Professor Auxiliar Convidado na Faculdade de Medicina da Universidade de Coimbra.<br>
-        Doutorado em Saúde Pública pela Escola Nacional de Saúde Pública da Universidade Nova de Lisboa (2021), com a tese "Emotional and behavioural pathways to early adolescent substance use". <br>
-        É autor e co-autor de artigos científicos em revistas especializadas com fator de impacto e orientador de dissertações de mestrado em saúde mental infantojuvenil.<br>
+        <i>10H45 – 11H15<br>
+          Intervalo.</i><br>
+        <br>
+        <b>11H15 – 12H45<br>
+          Terapia narrativa.</b><br>
+        <i>Drª Sofia Gabriel</i><br>
+        <br>
+        <i>12H45 – 14H00<br>
+          Almoço.</i><br>
+        <br>
+        <b>14H00 – 16H30<br>
+          Intervenções farmacológicas e casos clínicos.</b><br>
+        <i>Drª Inês Barroca e Dr João Mendes Coelho</i><br>
+        <br>
+        <h6 style="color: #8AC6CE" class="pb-3">Formadores</h6>
+        <b>Drª. Sara Valadares</b><br>
+        Psicóloga Clínica e da Saúde, especialista em Psicologia Clínica e da Saúde.
+
+        Formadora Certificada, terapeuta EMDR (Nível 1 e Nível 2)<br>
+        Membro efetivo da Ordem dos Psicólogos Portugueses e da Associação EMDR Portugal.<br>
+        Mestre em Psicologia Clínica e da Saúde pela Faculdade de Psicologia da Universidade de Lisboa, com dissertação de mestrado intitulada “Fatores Psicossociais Associados a Comportamentos Autolesivos e Ideação Suicida em Adolescentes”.<br>
+        Mestre em Psicoterapia Cognitivo‑Comportamental e Integrativa.</br>
+        Especializações avançadas: Suicídio e Comportamentos Autolesivos, Sexologia Clínica e Terapia de Casal.</br>
+        Formação especializada em Intervenção sicológica no Luto, Terapia Focada nos Esquemas, Terapia Comportamental Dialética (DBT), EMDR – Nível 1 e Nível 2, Intervenção Psicológica no Trauma Complexo, Intervenção nas Perturbações de Personalidade, Avaliação e Intervenção no Autismo, Avaliação e Intervenção na PHDA, Psicologia Perinatal, Intervenção Psicológica com Pessoas LGBTQIA+ e Avaliação e Intervenção na Infância e Adolescência.</br>
+          É coautora do capítulo
+          <em>“Sobreviver ao Suicídio: Diferentes Expressões de Luto e Intervenção Psicológica”</em>,
+          integrado no livro <em>“LUTO – Manual de Intervenção Psicológica”</em>, editora Pactor.
+        </br>
+
+        <br>
+        <b>Drª Sofia Gabriel</b><br>
+        Psicóloga Clínica.</br>
+        Mestre em Psicologia Clínica Cognitiva-Comportamental e Integrativa pela Faculdade de Psicologia da Universidade de Lisboa.</br>
+        Possui o Curso Pós-Graduado em Luto, pela Faculdade de Medicina da Universidade de Lisboa; o Curso de Gestão do Luto e Adaptação à Morte, pela Hogrefe e o Curso de Luto por Animal de Companhia, pela Universidade do Tennessee.</br>
+        Detém o curso de Redução de Incidentes Traumáticos (TIR - Traumatic Incident Reduction), de Intervenção Cognitiva-Narrativa no Luto, de Técnico de Apoio à Vítima (TAV), de Intervenção Psicológica com Pessoas LGBTQ, de Intervenção Psicológica em Problemas Ligados ao Álcool, de Avaliação Pericial em Psicologia Forense, uma Dupla Especialização Avançada em Terapia de Casal e Sexologia Clínica, uma Especialização Avançada em Psicologia da Gravidez e da Maternidade e um Curso de Intervenção Psicológica na Infertilidade.</br>
+        Coordenadora Científica da Especialização Avançada em Intervenção Psicológica no Luto no Instituto CRIAP.</br>
+        Autora de obras como <em>"Luto: Manual de Intervenção Psicológica"</em> e <em>"Virar a página: como lidar com o fim de uma relação"</em>, assim como de diversos capítulos e artigos científicos.
+        <br>
+
+        <br>
+        <b>Dr João Mendes Coelho</b><br>
+        Competência em Adictologia Clínica.<br>
+        Doutorando em Medicina e investigador na Universidade do Minho. <br>
+        Docente convidado na Universidade do Açores. <br>
+        Perito so Institulo de Medicina Legal e Ciências Forenses.<br>
+        Membro da direção da Sociedade Portuguesa de Suicidologia e da Associação Portuguesa de Patologia Dual.
+        <br>
+
+        <br>
+        <b>Drª Inês Barroca</b><br>
+        Psiquiatra da Infância e Adolescência na ULS de Lisboa Ocidental. <br>
+        Assistente convidada na NOVA Medical School.<br>
+        Formação especializada em PTSD e Luto.<br>
+        Doutoranda em Medicina, na área do trauma na infância e adolescência, na UBI.<br>
         <br>
 
         </p>
       </div>
       <h3>Anteriores</h3>
       <div>
+        <h6 style="color: #8AC6CE" class="pb-3"><b>24 de Outubro de 2025 - Sessão Questions & Answers: “Psicofarmacologia na Infância e Adolescência”</b></h6>
         <h6 style="color: #8AC6CE" class="pb-3"><b>26 de Setembro de 2025 - Intervenções nas perturbações do espectro do autismo na infância e adolescência</b></h6>
         <h6 style="color: #8AC6CE" class="pb-3"><b>22 de Março de 2025 - Intervenções nas perturbações de ansiedade na infância e adolescência</b></h6>
         <p class="text-black-61 pb-3">
         </p>
       </div>
     </div>
-    <!--
-    <div class="row justify-content-center">
-      <div class="col-12 col-xl-6 text-center">
-        {{ with .content.image }}{{ partial "utilities/image-fluid.html" . }}{{ end }}
-      </div>
-    </div>
-    <div class="row justify-content-center">
-      <div class="col-12 col-xl-6 text-center">
-        {{ with .content.button }}
-          <a class="btn btn-outline-primary px-4" href="{{ .url }}">{{ .label }}<span class="ms-2">{{ partial "icons/arrow-right.html" }}</span></a>
-        {{ end }}
-      </div>
-    </div>
-  -->
+    
   </div>
 </section>
